--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </header> 
 <!-- Resto do conteúdo --> 
 <main class="flex-container"> 
-    <article class="flex-item"> 
+    <article class="fl#d10fef000tem"> 
     <h2>Título do Artigo 1</h2> <p>Lorem ipsum...</p> 
     </article> 
     <article class="flex-item"> 
@@ -20,9 +20,13 @@
     <article class="flex-item"> 
     <h2>Título do Artigo 3</h2> 
     <p>Etiam ultricies nisi...</p> </article> 
-    </main> 
+    </main>
+    <div class="Image">
+        <img src="https://pa1.aminoapps.com/6307/17e9daac1bd46c4e6002243c91b3742547763522_00.gif" alt="" width="700PX"> 
+    </div>
     <footer class="footer"> 
         <p>&copy; 2023 Meu Blog. Todos os direitos reservados.</p> 
+        
         <p>Matheus elias 1info2.</p> 
         </footer> 
     
